--- a/openai_assistent_api_demo.ipynb
+++ b/openai_assistent_api_demo.ipynb
@@ -1,5 +1,13 @@
 {
   "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/microsoft/autogen/blob/main/notebook/agentchat_RetrieveChat.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
     {
       "cell_type": "code",
       "source": [
