使用 Colaboratory 创建

--- a/openai_assistent_api_demo.ipynb
+++ b/openai_assistent_api_demo.ipynb
@@ -16,7 +16,7 @@
       ],
       "metadata": {
         "id": "Wl2SUPi4N7Rg",
-        "outputId": "2bbb3f56-4a09-4a11-ba60-e37dd79c33c1",
+        "outputId": "ce02d25e-774b-4e3b-e832-7c6386bd1957",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "Ty9DDFh9sQHe"
       },
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "sjWgLV2eDM-S"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "1s01k6scUH5w"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
       "metadata": {
         "id": "qGyPLfiA0suR"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
       "metadata": {
         "id": "_XA-gsOI0yDS"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
       "metadata": {
         "id": "A9IscD2J0zrT"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
       "metadata": {
         "id": "ida1QopB0-oS"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,80 +228,28 @@
       "metadata": {
         "id": "CiIFk_sq1DEo"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "messages.model_dump_json"
+        "print(messages.data[0].content[0].text.value)"
       ],
       "metadata": {
-        "id": "6kC-oEEFb-ML",
-        "outputId": "1b23611f-c614-499e-dc13-2fc24eb9157d",
+        "id": "oIGT6X9MJDa1",
+        "outputId": "5b2eb0c6-6b97-44b8-dcb0-46028e02b602",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<bound method BaseModel.model_dump_json of SyncCursorPage[ThreadMessage](data=[ThreadMessage(id='msg_8JE3d7fRX6npmalkMdMrMlTT', assistant_id='asst_mIK5Gb71yb1Iu3PmePtiXOby', content=[MessageContentText(text=Text(annotations=[TextAnnotationFileCitation(end_index=247, file_citation=TextAnnotationFileCitationFileCitation(file_id='file-xpVHErHEAvwvDcy03y36vder', quote='Qingyun Wu† Gagan Bansal∗ Jieyu Zhang± Yiran Wu† Beibin Li∗   Erkang Zhu∗ Li Jiang∗ Xiaoyun Zhang∗ Shaokun Zhang† Jiale Liu∓   Ahmed Awadallah∗ Ryen W. White∗ Doug Burger∗ Chi Wang∗1'), start_index=236, text='【12†source】', type='file_citation')], value='AutoGen was created by a team of researchers, including Qingyun Wu, Gagan Bansal, Jieyu Zhang, Yiran Wu, Beibin Li, Erkang Zhu, Li Jiang, Xiaoyun Zhang, Shaokun Zhang, Jiale Liu, Ahmed Awadallah, Ryen W. White, Doug Burger, and Chi Wang【12†source】.'), type='text')], created_at=1699707890, file_ids=[], metadata={}, object='thread.message', role='assistant', run_id='run_HV5DWHVY7KJtQaDhWVV4328I', thread_id='thread_7XZM8Qdpb8vbKowiEW5BURw3'), ThreadMessage(id='msg_hb6d8ep2ol3LGTXrl3P5lK6d', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='Who create AutoGen?'), type='text')], created_at=1699707865, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_7XZM8Qdpb8vbKowiEW5BURw3'), ThreadMessage(id='msg_jbGtVfui0WE21UuyoM80xP9Q', assistant_id='asst_mIK5Gb71yb1Iu3PmePtiXOby', content=[MessageContentText(text=Text(annotations=[TextAnnotationFileCitation(end_index=849, file_citation=TextAnnotationFileCitationFileCitation(file_id='file-xpVHErHEAvwvDcy03y36vder', quote='AutoGen2 is an open-source framework that allows developers to build LLM ap- plications via multiple agents that can converse with each other to accomplish tasks. AutoGen agents are customizable conversable and can operate in vari- ous modes that employ combinations of LLMs human inputs and tools. Using AutoGen developers can also flexibly define agent interaction behaviors. Both natural language and computer code can be used to program flexible conversation patterns for different applications. AutoGen serves as a generic framework for building diverse applications of various complexities and LLM capacities. Em- pirical studies demonstrate the effectiveness of the framework in many example applications with domains ranging from mathematics coding question answer- ing operations research online decision-making entertainment etc'), start_index=839, text='【7†source】', type='file_citation')], value='AutoGen is an open-source framework that enables developers to create applications using large language models (LLMs) by leveraging multiple agents that can converse with each other to accomplish various tasks. With AutoGen, developers can customize these conversable agents and define their interaction behaviors in flexible ways, employing combinations of LLMs, human inputs, and tools. The framework supports programming these agents using both natural language and computer code to enable conversation patterns suitable for different applications. AutoGen is designed as a generic infrastructure that can accommodate diverse applications, with varying complexities and the capacities of LLMs, covering domains such as mathematics, coding, question answering, operations research, online decision-making, and entertainment, among others【7†source】.'), type='text')], created_at=1699706300, file_ids=[], metadata={}, object='thread.message', role='assistant', run_id='run_f8cudbSlBwMhFjeiwwU6Si4D', thread_id='thread_7XZM8Qdpb8vbKowiEW5BURw3'), ThreadMessage(id='msg_1zpy6SIqU4k1QqMaT9wHRkxA', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='What is AutoGen?'), type='text')], created_at=1699706100, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_7XZM8Qdpb8vbKowiEW5BURw3')], object='list', first_id='msg_8JE3d7fRX6npmalkMdMrMlTT', last_id='msg_1zpy6SIqU4k1QqMaT9wHRkxA', has_more=False)>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 39
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "messages.model_dump"
-      ],
-      "metadata": {
-        "id": "SWsC-oeqcU5k",
-        "outputId": "fd6c81a8-3528-459b-cdc5-7eabc4cb3660",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<bound method BaseModel.model_dump of SyncCursorPage[ThreadMessage](data=[ThreadMessage(id='msg_jbGtVfui0WE21UuyoM80xP9Q', assistant_id='asst_mIK5Gb71yb1Iu3PmePtiXOby', content=[MessageContentText(text=Text(annotations=[TextAnnotationFileCitation(end_index=849, file_citation=TextAnnotationFileCitationFileCitation(file_id='file-xpVHErHEAvwvDcy03y36vder', quote='AutoGen2 is an open-source framework that allows developers to build LLM ap- plications via multiple agents that can converse with each other to accomplish tasks. AutoGen agents are customizable conversable and can operate in vari- ous modes that employ combinations of LLMs human inputs and tools. Using AutoGen developers can also flexibly define agent interaction behaviors. Both natural language and computer code can be used to program flexible conversation patterns for different applications. AutoGen serves as a generic framework for building diverse applications of various complexities and LLM capacities. Em- pirical studies demonstrate the effectiveness of the framework in many example applications with domains ranging from mathematics coding question answer- ing operations research online decision-making entertainment etc'), start_index=839, text='【7†source】', type='file_citation')], value='AutoGen is an open-source framework that enables developers to create applications using large language models (LLMs) by leveraging multiple agents that can converse with each other to accomplish various tasks. With AutoGen, developers can customize these conversable agents and define their interaction behaviors in flexible ways, employing combinations of LLMs, human inputs, and tools. The framework supports programming these agents using both natural language and computer code to enable conversation patterns suitable for different applications. AutoGen is designed as a generic infrastructure that can accommodate diverse applications, with varying complexities and the capacities of LLMs, covering domains such as mathematics, coding, question answering, operations research, online decision-making, and entertainment, among others【7†source】.'), type='text')], created_at=1699706300, file_ids=[], metadata={}, object='thread.message', role='assistant', run_id='run_f8cudbSlBwMhFjeiwwU6Si4D', thread_id='thread_7XZM8Qdpb8vbKowiEW5BURw3'), ThreadMessage(id='msg_1zpy6SIqU4k1QqMaT9wHRkxA', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='What is AutoGen?'), type='text')], created_at=1699706100, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_7XZM8Qdpb8vbKowiEW5BURw3')], object='list', first_id='msg_jbGtVfui0WE21UuyoM80xP9Q', last_id='msg_1zpy6SIqU4k1QqMaT9wHRkxA', has_more=False)>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(messages)"
-      ],
-      "metadata": {
-        "id": "EkF7xCqu1EV8",
-        "outputId": "ae1e051e-47d7-4050-86c3-9aef98d8514c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 25,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SyncCursorPage[ThreadMessage](data=[ThreadMessage(id='msg_jbGtVfui0WE21UuyoM80xP9Q', assistant_id='asst_mIK5Gb71yb1Iu3PmePtiXOby', content=[MessageContentText(text=Text(annotations=[TextAnnotationFileCitation(end_index=849, file_citation=TextAnnotationFileCitationFileCitation(file_id='file-xpVHErHEAvwvDcy03y36vder', quote='AutoGen2 is an open-source framework that allows developers to build LLM ap- plications via multiple agents that can converse with each other to accomplish tasks. AutoGen agents are customizable conversable and can operate in vari- ous modes that employ combinations of LLMs human inputs and tools. Using AutoGen developers can also flexibly define agent interaction behaviors. Both natural language and computer code can be used to program flexible conversation patterns for different applications. AutoGen serves as a generic framework for building diverse applications of various complexities and LLM capacities. Em- pirical studies demonstrate the effectiveness of the framework in many example applications with domains ranging from mathematics coding question answer- ing operations research online decision-making entertainment etc'), start_index=839, text='【7†source】', type='file_citation')], value='AutoGen is an open-source framework that enables developers to create applications using large language models (LLMs) by leveraging multiple agents that can converse with each other to accomplish various tasks. With AutoGen, developers can customize these conversable agents and define their interaction behaviors in flexible ways, employing combinations of LLMs, human inputs, and tools. The framework supports programming these agents using both natural language and computer code to enable conversation patterns suitable for different applications. AutoGen is designed as a generic infrastructure that can accommodate diverse applications, with varying complexities and the capacities of LLMs, covering domains such as mathematics, coding, question answering, operations research, online decision-making, and entertainment, among others【7†source】.'), type='text')], created_at=1699706300, file_ids=[], metadata={}, object='thread.message', role='assistant', run_id='run_f8cudbSlBwMhFjeiwwU6Si4D', thread_id='thread_7XZM8Qdpb8vbKowiEW5BURw3'), ThreadMessage(id='msg_1zpy6SIqU4k1QqMaT9wHRkxA', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='What is AutoGen?'), type='text')], created_at=1699706100, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_7XZM8Qdpb8vbKowiEW5BURw3')], object='list', first_id='msg_jbGtVfui0WE21UuyoM80xP9Q', last_id='msg_1zpy6SIqU4k1QqMaT9wHRkxA', has_more=False)\n"
+            "AutoGen was created by a team of researchers, including Qingyun Wu, Gagan Bansal, Jieyu Zhang, Yiran Wu, Beibin Li, Erkang Zhu, Li Jiang, Xiaoyun Zhang, Shaokun Zhang, Jiale Liu, Ahmed Awadallah, Ryen W. White, Doug Burger, and Chi Wang【12†source】.\n"
           ]
         }
       ]
