使用 Colab 创建而成

--- a/langgraph_code_assistant.ipynb
+++ b/langgraph_code_assistant.ipynb
@@ -19,7 +19,7 @@
       },
       "outputs": [],
       "source": [
-        " ! pip install -U langchain_community langchain-openai langchain-anthropic langchain langgraph bs4"
+        " ! pip install -U langchain_community langchain-openai langchain langgraph bs4"
       ]
     },
     {
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 50,
       "id": "c2eb35d1-4990-47dc-a5c4-208bae588a82",
       "metadata": {
         "id": "c2eb35d1-4990-47dc-a5c4-208bae588a82"
@@ -69,12 +69,12 @@
         "id": "GEh57OUGUFd7"
       },
       "id": "GEh57OUGUFd7",
-      "execution_count": 9,
+      "execution_count": 51,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 52,
       "id": "3ba3df70-f6b4-4ea5-a210-e10944960bc6",
       "metadata": {
         "id": "3ba3df70-f6b4-4ea5-a210-e10944960bc6"
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 53,
       "id": "9f14750f-dddc-485b-ba29-5392cdf4ba43",
       "metadata": {
         "scrolled": true,
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 54,
       "id": "c185f1a2-e943-4bed-b833-4243c9c64092",
       "metadata": {
         "id": "c185f1a2-e943-4bed-b833-4243c9c64092"
@@ -211,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 55,
       "id": "b70e8301-63ae-4f7e-ad8f-c9a052fe3566",
       "metadata": {
         "id": "b70e8301-63ae-4f7e-ad8f-c9a052fe3566"
@@ -227,9 +227,6 @@
         "\n",
         "# Max tries\n",
         "max_iterations = 3\n",
-        "# Reflect\n",
-        "# flag = 'reflect'\n",
-        "flag = 'do not reflect'\n",
         "\n",
         "### Nodes\n",
         "\n",
@@ -308,34 +305,6 @@
         "    print(\"---NO CODE TEST FAILURES---\")\n",
         "    return {\"generation\": code_solution, \"messages\": messages, \"iterations\": iterations, \"error\": \"no\"}\n",
         "\n",
-        "def reflect(state: GraphState):\n",
-        "    \"\"\"\n",
-        "    Reflect on errors\n",
-        "\n",
-        "    Args:\n",
-        "        state (dict): The current graph state\n",
-        "\n",
-        "    Returns:\n",
-        "        state (dict): New key added to state, generation\n",
-        "    \"\"\"\n",
-        "\n",
-        "    print(\"---GENERATING CODE SOLUTION---\")\n",
-        "\n",
-        "    # State\n",
-        "    messages = state[\"messages\"]\n",
-        "    iterations = state[\"iterations\"]\n",
-        "    code_solution = state[\"generation\"]\n",
-        "\n",
-        "    # Prompt reflection\n",
-        "    reflection_message = [(\"user\", \"\"\"You tried to solve this problem and failed a unit test. Reflect on this failure\n",
-        "                                    given the provided documentation. Write a few key suggestions based on the\n",
-        "                                    documentation to avoid making this mistake again.\"\"\")]\n",
-        "\n",
-        "    # Add reflection\n",
-        "    reflections = code_gen_chain.invoke({\"context\"  : concatenated_content, \"messages\" : messages})\n",
-        "    messages += [(\"assistant\" , f\"Here are reflections on the error: {reflections}\")]\n",
-        "    return {\"generation\": code_solution, \"messages\": messages, \"iterations\": iterations}\n",
-        "\n",
         "### Edges\n",
         "\n",
         "def decide_to_finish(state: GraphState):\n",
@@ -356,15 +325,12 @@
         "        return \"end\"\n",
         "    else:\n",
         "        print(\"---DECISION: RE-TRY SOLUTION---\")\n",
-        "        if flag == 'reflect':\n",
-        "            return \"reflect\"\n",
-        "        else:\n",
-        "            return \"generate\""
+        "        return \"generate\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 56,
       "id": "f66b4e00-4731-42c8-bc38-72dd0ff7c92c",
       "metadata": {
         "id": "f66b4e00-4731-42c8-bc38-72dd0ff7c92c"
@@ -378,7 +344,6 @@
         "# Define the nodes\n",
         "workflow.add_node(\"generate\", generate)  # generation solution\n",
         "workflow.add_node(\"check_code\", code_check)  # check code\n",
-        "workflow.add_node(\"reflect\", reflect)  # reflect\n",
         "\n",
         "# Build graph\n",
         "workflow.set_entry_point(\"generate\")\n",
@@ -388,24 +353,22 @@
         "    decide_to_finish,\n",
         "    {\n",
         "        \"end\": END,\n",
-        "        \"reflect\": \"reflect\",\n",
         "        \"generate\": \"generate\",\n",
         "    },\n",
         ")\n",
-        "workflow.add_edge(\"reflect\", \"generate\")\n",
         "app = workflow.compile()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 57,
       "id": "9bcaafe4-ddcf-4fab-8620-2d9b6c508f98",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9bcaafe4-ddcf-4fab-8620-2d9b6c508f98",
-        "outputId": "fbabcedf-24a0-47ac-ac2f-06a21f0eb8ce"
+        "outputId": "abb39233-0ba6-4c54-ed68-ce5626cdae01"
       },
       "outputs": [
         {
@@ -414,7 +377,7 @@
           "text": [
             "---GENERATING CODE SOLUTION---\n",
             "---CHECKING CODE---\n",
-            "A large language model is a type of artificial intelligence model that has been trained on massive amounts of text data to understand and generate human-like language. These models are typically based on deep learning techniques, such as neural networks, and have the capability to process and generate text at a large scale. Examples of large language models include GPT-3 (Generative Pre-trained Transformer 3) developed by OpenAI and BERT (Bidirectional Encoder Representations from Transformers) developed by Google.\n",
+            "content='A large language model is a type of artificial intelligence system that is trained on vast amounts of text data to understand and generate human-like text. These models are able to process and generate natural language text in a way that is coherent and contextually relevant. Large language models have been used in various applications such as machine translation, text generation, question answering, and more.' response_metadata={'token_usage': {'completion_tokens': 73, 'prompt_tokens': 28, 'total_tokens': 101}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': 'fp_3b956da36b', 'finish_reason': 'stop', 'logprobs': None} id='run-0f0880ce-cd52-40eb-9406-3e3fa3ede286-0'\n",
             "---NO CODE TEST FAILURES---\n",
             "---DECISION: FINISH---\n"
           ]
@@ -427,13 +390,13 @@
               " 'messages': [('user',\n",
               "   'How can I use langchain ask question: what is large language model ?'),\n",
               "  ('assistant',\n",
-              "   'Using LangChain to ask a question about large language models involves setting up the necessary components such as the LLM (Large Language Model) integration, prompt templates, and output parsers. The following code demonstrates how to initialize a ChatOpenAI instance, create a prompt template, and invoke the LLM to ask the question \\'What is a large language model?\\'. The code assumes that the necessary packages have been installed and the OPENAI_API_KEY environment variable has been set. \\n Imports: from langchain_openai import ChatOpenAI\\nfrom langchain_core.prompts import ChatPromptTemplate\\nfrom langchain_core.output_parsers import StrOutputParser \\n Code: # Initialize the ChatOpenAI instance\\nllm = ChatOpenAI()\\n\\n# Create a prompt template\\nprompt = ChatPromptTemplate.from_messages([\\n    (\"system\", \"You are an AI knowledgeable about language models.\"),\\n    (\"user\", \"{input}\")\\n])\\n\\n# Combine the prompt and the LLM into a chain\\nchain = prompt | llm\\n\\n# Add an output parser to convert the chat message to a string\\noutput_parser = StrOutputParser()\\nchain = chain | output_parser\\n\\n# Invoke the chain with the question\\nresponse = chain.invoke({\"input\": \"What is a large language model?\"})\\n\\n# Print the response\\nprint(response)')],\n",
-              " 'generation': code(prefix=\"Using LangChain to ask a question about large language models involves setting up the necessary components such as the LLM (Large Language Model) integration, prompt templates, and output parsers. The following code demonstrates how to initialize a ChatOpenAI instance, create a prompt template, and invoke the LLM to ask the question 'What is a large language model?'. The code assumes that the necessary packages have been installed and the OPENAI_API_KEY environment variable has been set.\", imports='from langchain_openai import ChatOpenAI\\nfrom langchain_core.prompts import ChatPromptTemplate\\nfrom langchain_core.output_parsers import StrOutputParser', code='# Initialize the ChatOpenAI instance\\nllm = ChatOpenAI()\\n\\n# Create a prompt template\\nprompt = ChatPromptTemplate.from_messages([\\n    (\"system\", \"You are an AI knowledgeable about language models.\"),\\n    (\"user\", \"{input}\")\\n])\\n\\n# Combine the prompt and the LLM into a chain\\nchain = prompt | llm\\n\\n# Add an output parser to convert the chat message to a string\\noutput_parser = StrOutputParser()\\nchain = chain | output_parser\\n\\n# Invoke the chain with the question\\nresponse = chain.invoke({\"input\": \"What is a large language model?\"})\\n\\n# Print the response\\nprint(response)', description='Schema for code solutions to questions about LCEL.'),\n",
+              "   'Using the LangChain library, we can create a simple application to ask a large language model (LLM) a question like \\'what is a large language model?\\'. The code will include initializing the LLM of choice, creating a prompt template, and invoking the LLM with the question. The following code assumes that the necessary packages have been installed and that the environment variable for the API key has been set as per the documentation. \\n Imports: from langchain_openai import ChatOpenAI\\nfrom langchain_core.prompts import ChatPromptTemplate \\n Code: llm = ChatOpenAI()\\n\\nprompt = ChatPromptTemplate.from_messages([\\n    (\"system\", \"You are an AI trained to answer questions accurately.\"),\\n    (\"user\", \"{input}\")\\n])\\n\\nresponse = (prompt | llm).invoke({\"input\": \"what is a large language model?\"})\\nprint(response)')],\n",
+              " 'generation': code(prefix=\"Using the LangChain library, we can create a simple application to ask a large language model (LLM) a question like 'what is a large language model?'. The code will include initializing the LLM of choice, creating a prompt template, and invoking the LLM with the question. The following code assumes that the necessary packages have been installed and that the environment variable for the API key has been set as per the documentation.\", imports='from langchain_openai import ChatOpenAI\\nfrom langchain_core.prompts import ChatPromptTemplate', code='llm = ChatOpenAI()\\n\\nprompt = ChatPromptTemplate.from_messages([\\n    (\"system\", \"You are an AI trained to answer questions accurately.\"),\\n    (\"user\", \"{input}\")\\n])\\n\\nresponse = (prompt | llm).invoke({\"input\": \"what is a large language model?\"})\\nprint(response)', description='Schema for code solutions to questions about LCEL.'),\n",
               " 'iterations': 1}"
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 57
         }
       ],
       "source": [
