--- a/ragas_base.ipynb
+++ b/ragas_base.ipynb
@@ -1,1 +1,287 @@
-
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ojKrqPJvqYTb"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/wangzhenyagit/myColab/blob/main/ragas_base.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install openai"
+      ],
+      "metadata": {
+        "id": "Wl2SUPi4N7Rg",
+        "outputId": "ce02d25e-774b-4e3b-e832-7c6386bd1957",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: openai in /usr/local/lib/python3.10/dist-packages (1.2.3)\n",
+            "Requirement already satisfied: anyio<4,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
+            "Requirement already satisfied: distro<2,>=1.7.0 in /usr/lib/python3/dist-packages (from openai) (1.7.0)\n",
+            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.25.1)\n",
+            "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (1.10.13)\n",
+            "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.1)\n",
+            "Requirement already satisfied: typing-extensions<5,>=4.5 in /usr/local/lib/python3.10/dist-packages (from openai) (4.5.0)\n",
+            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<4,>=3.5.0->openai) (3.4)\n",
+            "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.10/dist-packages (from anyio<4,>=3.5.0->openai) (1.3.0)\n",
+            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<4,>=3.5.0->openai) (1.1.3)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2023.7.22)\n",
+            "Requirement already satisfied: httpcore in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (1.0.2)\n",
+            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.10/dist-packages (from httpcore->httpx<1,>=0.23.0->openai) (0.14.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "from openai import OpenAI\n",
+        "import os\n",
+        "import json\n",
+        "\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"your-api-key\"\n",
+        "\n",
+        "client = OpenAI()"
+      ],
+      "metadata": {
+        "id": "Ty9DDFh9sQHe"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Upload a file with an \"assistants\" purpose\n",
+        "file = client.files.create(\n",
+        "  file=open(\"AutoGen- Enabling Next-Gen LLM Applications via Multi-Agent Conversation.pdf\", \"rb\"),\n",
+        "  purpose='assistants'\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "sjWgLV2eDM-S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Add the file to the assistant\n",
+        "assistant = client.beta.assistants.create(\n",
+        "  name=\"Paper Analyst\",\n",
+        "  instructions=\"You are a paper analysis chatbot. Use your knowledge base to best respond to user queries.\",\n",
+        "  model=\"gpt-4-1106-preview\",\n",
+        "  tools=[{\"type\": \"retrieval\"}],\n",
+        "  file_ids=[file.id]\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "1s01k6scUH5w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "thread = client.beta.threads.create()"
+      ],
+      "metadata": {
+        "id": "qGyPLfiA0suR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(thread)"
+      ],
+      "metadata": {
+        "id": "YqnPsTSMg_Nn",
+        "outputId": "2ecda3a4-a770-42f3-e845-89178753d80d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Thread(id='thread_7XZM8Qdpb8vbKowiEW5BURw3', created_at=1699706096, metadata={}, object='thread')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "message = client.beta.threads.messages.create(\n",
+        "    thread_id=thread.id,\n",
+        "    role=\"user\",\n",
+        "    content=\"Who create AutoGen?\"\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "_XA-gsOI0yDS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "run = client.beta.threads.runs.create(\n",
+        "  thread_id=thread.id,\n",
+        "  assistant_id=assistant.id\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "A9IscD2J0zrT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(run)"
+      ],
+      "metadata": {
+        "id": "j36XQ3D8fFkm",
+        "outputId": "55a2c7a1-86f9-433d-a98d-28eed1f2499e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Run(id='run_HV5DWHVY7KJtQaDhWVV4328I', assistant_id='asst_mIK5Gb71yb1Iu3PmePtiXOby', cancelled_at=None, completed_at=None, created_at=1699707885, expires_at=1699708485, failed_at=None, file_ids=['file-xpVHErHEAvwvDcy03y36vder'], instructions='You are a paper analysis chatbot. Use your knowledge base to best respond to user queries.', last_error=None, metadata={}, model='gpt-4-1106-preview', object='thread.run', required_action=None, started_at=None, status='queued', thread_id='thread_7XZM8Qdpb8vbKowiEW5BURw3', tools=[ToolAssistantToolsRetrieval(type='retrieval')])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "run = client.beta.threads.runs.retrieve(\n",
+        "  thread_id=thread.id,\n",
+        "  run_id=run.id\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "ida1QopB0-oS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(run)"
+      ],
+      "metadata": {
+        "id": "wXRUDji9gVAK",
+        "outputId": "00185dd2-0978-428d-d8a1-d22d8f1aa00e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Run(id='run_HV5DWHVY7KJtQaDhWVV4328I', assistant_id='asst_mIK5Gb71yb1Iu3PmePtiXOby', cancelled_at=None, completed_at=1699707892, created_at=1699707885, expires_at=None, failed_at=None, file_ids=['file-xpVHErHEAvwvDcy03y36vder'], instructions='You are a paper analysis chatbot. Use your knowledge base to best respond to user queries.', last_error=None, metadata={}, model='gpt-4-1106-preview', object='thread.run', required_action=None, started_at=1699707885, status='completed', thread_id='thread_7XZM8Qdpb8vbKowiEW5BURw3', tools=[ToolAssistantToolsRetrieval(type='retrieval')])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "messages = client.beta.threads.messages.list(\n",
+        "  thread_id=thread.id\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "CiIFk_sq1DEo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(messages.data[0].content[0].text.value)"
+      ],
+      "metadata": {
+        "id": "oIGT6X9MJDa1",
+        "outputId": "5b2eb0c6-6b97-44b8-dcb0-46028e02b602",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AutoGen was created by a team of researchers, including Qingyun Wu, Gagan Bansal, Jieyu Zhang, Yiran Wu, Beibin Li, Erkang Zhu, Li Jiang, Xiaoyun Zhang, Shaokun Zhang, Jiale Liu, Ahmed Awadallah, Ryen W. White, Doug Burger, and Chi Wang【12†source】.\n"
+          ]
+        }
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.17"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+      }
+    },
+    "colab": {
+      "provenance": []
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
